--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -7,6 +7,13 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  application:
+    name: order-service
 
 server:
     port: 8081
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:password@localhost:8761/eureka
