--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -4,3 +4,13 @@ spring:
       host: localhost
       port: 27017
       database: product_service
+  application:
+    name: product-service
+
+server:
+  port: 8080
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:password@localhost:8761/eureka
