added zipkin for distributed tracing, small fixes in code

--- a/discovery-server/build.gradle
+++ b/discovery-server/build.gradle
@@ -22,6 +22,10 @@ ext {
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // Distributed tracing
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 }
 
 dependencyManagement {
