--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	// API Documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+	// Kafka
+	implementation 'org.springframework.kafka:spring-kafka'
+
 	//Mapstruct
 	implementation("org.mapstruct:mapstruct:1.5.5.Final")
 	annotationProcessor("org.mapstruct:mapstruct-processor:1.5.5.Final")
