--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -45,6 +45,11 @@ dependencies {
 	// API Documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	// Prometheus
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
