--- a/inventory-service/build.gradle
+++ b/inventory-service/build.gradle
@@ -37,6 +37,11 @@ dependencies {
 	// API Documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	// Prometheus
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
